--- a/frontend/index.html
+++ b/frontend/index.html
@@ -480,7 +480,7 @@
 </body>
 <script>
     const END_POINT = "http://127.0.0.1:8000/query";
-    const SYNC_ENDPOINT = "http://127.0.0.1:8000/sync/check";
+    const SYNC_ENDPOINT = "http://127.0.0.1:8000/sync";
     const DEFAULT_QUESTION = "What is a dative covalent bond";
     
     // Set default value
@@ -546,7 +546,7 @@
         statusEl.title = 'Sync status: checking...';
 
         try {
-            const res = await fetch(SYNC_ENDPOINT, { method: "POST" });
+            const res = await fetch(SYNC_ENDPOINT, { method: "GET" });
             if (!res.ok) throw new Error(`HTTP ${res.status}`);
             const data = await res.json();
             if (data && data.is_in_sync === true) {
